# Relay

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  IMPLEMENTATION_PLAN.md  Internal-changelog.md  README.md  REVIEW-FIX.md  index.html  mypy.ini  prism.js  pyproject.toml  style.css
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy-website.yml
.planning/: FULL-CODEBASE-REVIEW.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/audits/: 2026-05-17-full-codebase-review.md  2026-05-17-integration-audit.md  2026-05-17-security-audit.md  Ruthless-Code-Review.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-snapshotstore-protocol-extraction/: 01-01-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-REVIEW-FIX.md  01-REVIEW.md  01-REVIEWS.md  01-UAT.md
.planning/phases/02-structured-audit-logging/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-CONTEXT.md  02-DISCUSS-CHECKPOINT.json  02-PATTERNS.md  02-RESEARCH.md  02-VALIDATION.md
.planning/research/: ARCHITECTURE.md  PHASE1-EXECUTION-RESEARCH.md  PITFALLS.md  SUMMARY.md  feature-explainer.md
docs/: Pre-v0.3-plan.md  Relay Coding Rules.md  Relay Coding Rules.txt  Relay Design Document.md  Relay Design Document.txt  relay-0.2-plan.md  success.md  v0.2-Implementation-plan.md  v0.3-plan.md
docs/Audits/: 2026-05-17-code-review.md  2026-05-17-review-fix-log.md  Audit-10-May-2026-2.md  Audit-10-May-2026-3.md  Audit-10-May-2026.md  Audit-15-May-2026-2.md  Audit-15-May-2026.md  Audit-16-May-2026-2.md  Audit-16-May-2026-3.md  Audit-16-May-2026.md  Audit-6-May-2026.md  Audit-7-May-2026.md  Ruthless-Code-Review.md  V0.4-Audit.md
docs/GSD/: REVIEW-FIX.md  REVIEW.md
docs/research/: research-summary.md  tech-stack.md
docs/superpowers/plans/: 2024-05-16-fix-test-pipeline-mypy.md  2026-05-16-bulk-test-renaming-rule-7-1-part-4.md  2026-05-16-bulk-test-renaming-rule-7-1.md  2026-05-16-core-state-test-fixes.md  2026-05-16-domain-4-integration-parallel-tests.md  2026-05-16-fix-runner-tests-types.md  2026-05-16-phase-2-source-fixes-plan.md  2026-05-16-phase-3-test-type-safety-plan.md  2026-05-16-ruthless-audit-fixes.md  2026-05-16-test-mypy-fixes-execution-budget.md  2026-05-18-branch-receipt-event.md  2026-05-18-doc-consolidation.md  2026-05-18-organize-audits.md  2026-05-18-organize-research.md  2026-05-18-relocate-project-management-files.md  2026-05-18-update-doc-links.md
docs/superpowers/specs/: 2026-05-16-phase-2-source-fixes-design.md  2026-05-16-phase-3-test-type-safety-design.md  2026-05-17-marketing-content-design.md  2026-05-17-website-design.md  2026-05-18-branch-receipt-event-design.md  2026-05-18-doc-consolidation-design.md
docs/untracked/: untracked-files.md
docs/version-0.3/: v0.3-plan.md
docs/version-0.4/: v0.4-plan.md
docs/website/: index.html  main.js
scripts/: check_failure_coverage.py  check_layer_violations.py  check_no_private_api_imports.py  check_test_names.py
src/relay/: __init__.py  async_pipeline.py  budget_enforcer.py  context_broker.py  core_pipeline.py  envelope.py  pipeline.py  pipeline_rollback.py  pipeline_snapshot.py  pipeline_state.py  providers.py  runner.py  slicer.py  snapshot.py  snapshot_in_memory.py  snapshot_protocol.py  types.py  validator.py
src/relay/audit/: __init__.py  events.py  redactor.py  sink.py
src/relay/budget/: __init__.py  enforcer.py  token_counter.py
src/relay/parallel/: __init__.py  fork_runner.py  join.py  types.py
src/relay/runners/: __init__.py  autogen.py  crewai.py  langchain.py  local_model.py  protocol.py  raw_sdk.py  registry.py
src/relay/slicer/: __init__.py  manifest.py  packers.py  providers.py  strategy.py
tests/: conftest.py
tests/integration/: __init__.py  test_parallel_pipeline.py  test_pipeline_integration.py  test_runners_integration.py
tests/unit/: __init__.py  test_async_pipeline.py  test_audit_events.py  test_audit_redactor.py  test_audit_sink.py  test_budget.py  test_budget_enforcer.py  test_context_broker.py  test_envelope.py  test_pipeline.py  test_pipeline_rollback.py  test_pipeline_snapshot.py  test_pipeline_state.py  test_providers.py  test_runner.py  test_slicer.py  test_snapshot.py  test_snapshot_in_memory.py  test_types.py  test_validator.py
tests/unit/test_parallel/: conftest.py  test_fork_runner.py  test_join.py  test_types.py
tests/unit/test_runners/: conftest.py  test_autogen.py  test_crewai.py  test_langchain.py  test_local_model.py  test_protocol.py  test_raw_sdk.py  test_registry.py
(+11 files in other folders)
