[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "relay-middleware"
version = "0.3.3"
description = "Context-driven data pipeline with budget enforcement and pluggable context slicing"
readme = "README.md"
authors = [
  { name="Kriday Dave" }
]
license = { file = "LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/kridaydave/relay"
"Bug Tracker" = "https://github.com/kridaydave/relay/issues"

[project.optional-dependencies]
dev = ["pytest", "mypy"]
tiktoken = ["tiktoken"]
langchain = ["langchain-core>=0.1"]
crewai    = ["crewai>=0.30"]
autogen   = ["pyautogen>=0.2"]
local     = ["httpx>=0.27"]
all       = [
    "tiktoken",
    "langchain-core>=0.1",
    "crewai>=0.30",
    "pyautogen>=0.2",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "*/tests/*"]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
